# mas-agent

./: .gitignore  CONTRIBUTION.md  README.md  pyproject.toml
examples/: lora_report.json  neurallam_report.json  scanpy_report.json  semidetr_report.json
mas_agent/: __init__.py  agent.py  cli.py  repo_fetcher.py  report.py
mas_agent/analyzers/: dependencies.py  structure.py
