[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mas-agent"
version = "0.1.0"
description = "MAS Agent — Automated agent-readiness scorer for research paper repositories"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Ankita Kundra"}]
dependencies = ["click>=8.0", "rich>=13.0"]

[project.scripts]
mas-score = "mas_agent.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mas_agent", "mas_agent.*"]
